--- a/employee_scheduler.html
+++ b/employee_scheduler.html
@@ -1,9 +1,22 @@
 <head>
+  <link rel='stylesheet' href='fullcalendar/fullcalendar.css' />
+  <script src='lib/jquery-2.1.1.min.js'></script>
+  <script src='lib/moment.min.js'></script>
+  <script src='fullcalendar/fullcalendar.js'></script>
+  <script>
+    $(document).ready(function() {
+      // page is now ready, initialize the calendar...
+      $('#calendar').fullCalendar({
+          // put your options and callbacks here
+      })
+    });
+  </script>
   <title>employee_scheduler</title>
 </head>
 
 <body>
   <h1>Welcome to Meteor!</h1>
+  <div id='calendar'></div>
 
   {{> hello}}
 </body>
